--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   max-width: 100vw;
 }
 
+#loginContainer{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: min-content;
+  height: min-content;
+  background-color: transparent;
+}
+
 
 :root {
   --color1: rgb(0, 0, 0);
