--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ aside.asideSection {
   height: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 20% 1fr;
+  grid-template-rows: 20% 74vh;
   gap: 1em;
 }
 
@@ -165,6 +165,69 @@ section.biblio div.biblio-main{
   color: var(--color5);
   gap: 1em;
 }
+
+/*--logged*/
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column{
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged{
+height: 5em;
+padding: .1em .1em .1em .4em;
+border-radius: .3em;
+background-color: transparent;
+transition: all .1s ease-in-out;
+display: flex;
+align-items: center;
+border: none;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged:hover{
+background-color: var(--color3);
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged a{
+display: flex;
+gap: 1.2em;
+width: 100%;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged div.imageAlbum{
+width: 3em;
+height: 100%;
+display: grid;
+place-items: center;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged div.imageAlbum img{
+width: 4.3em;
+height: 100%;
+border-radius: .3em;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged div.nameAlbum{
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: left;
+padding: 0 0 0 .5em;
+gap: .3em;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged div.nameAlbum div.albumName{
+font-weight: bold;
+color: var(--color5);
+font-size: 1.1em;
+}
+
+section.biblio div.biblio-main section.favouritesAlbums-logged-column button.elementAlbumLogged div.nameAlbum div.artistName{
+color: var(--color4);
+}
+
+/*--fin logged*/
 
 section.biblio div.biblio-main div.biblioCard{
   display: flex;
@@ -276,6 +339,49 @@ main.mainContent:hover::-webkit-scrollbar-thumb{
 
 main.mainContent header h1{
   font-size: 2em;
+}
+
+main.mainContent header section.favouritesAlbums-logged {
+  margin: 2em 0 0 0;
+  width: 100%;
+  height: 8em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: .5em;
+}
+
+main.mainContent header section.favouritesAlbums-logged button{
+  background-color: var(--color3);
+  border: none;
+  border-radius: .3em;
+  display: flex;
+  transition: all .2s ease-in-out;
+}
+
+main.mainContent header section.favouritesAlbums-logged button:hover{
+  background-color: var(--color4);
+}
+
+main.mainContent header section.favouritesAlbums-logged button .imageAlbum{
+  height: 100%;
+  width: 5em;
+}
+
+main.mainContent header section.favouritesAlbums-logged button .imageAlbum img{
+  height: 100%;
+  width: 5em;
+  border-radius: .3em 0 0 .3em;
+}
+
+main.mainContent header section.favouritesAlbums-logged button div.nameAlbum{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  font-size: 1.2em;
+  padding: 0 0 0 .5em;
+  color: var(--color5);
 }
 
 main.mainContent article.bodyOfContent {
