--- a/capsulas/stylesSearch.css
+++ b/capsulas/stylesSearch.css
@@ -7,6 +7,7 @@ article.containerOfSearch{
     position: absolute;
     top: 0;
     left: 0;
+    padding: 3em 0 0 0;
 }
 
 article.containerOfSearch header{
